[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/HUD/DPGS_Rate.png" type="Texture" id=1]
[ext_resource path="res://Themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/HUD/next stage.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HUD/PhaseHUD.gd" type="Script" id=5]
[ext_resource path="res://Tools/auto_size_label.gd" type="Script" id=6]
[ext_resource path="res://Scenes/HUD/PhaseStep.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PhaseHUD" type="MarginContainer"]
rect_min_size = Vector2( 240, 80 )
mouse_filter = 2
theme = ExtResource( 2 )
custom_constants/margin_right = 2
custom_constants/margin_top = 8
custom_constants/margin_left = 2
custom_constants/margin_bottom = 8
script = ExtResource( 5 )

[node name="Phase" type="NinePatchRect" parent="."]
margin_left = 2.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 72.0
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 8

[node name="Margin" type="MarginContainer" parent="Phase"]
margin_right = 236.0
margin_bottom = 64.0
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Control" type="Control" parent="Phase/Margin"]
margin_left = 8.0
margin_top = 4.0
margin_right = 228.0
margin_bottom = 56.0

[node name="PhaseTitle" type="Label" parent="Phase/Margin/Control"]
anchor_right = 1.0
anchor_bottom = 0.5
theme_type_variation = "LabelBold"
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DPG status application"
align = 1
valign = 1
autowrap = true
script = ExtResource( 6 )
max_font_size = 16
padding = 20

[node name="MarginContainer" type="MarginContainer" parent="Phase/Margin/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Phase/Margin/Control/MarginContainer"]
margin_top = 5.0
margin_right = 220.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 2
alignment = 1

[node name="PhaseStep1" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 12.0
margin_right = 32.0

[node name="PhaseStep2" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 34.0
margin_right = 54.0

[node name="PhaseStep3" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 56.0
margin_right = 76.0

[node name="PhaseStep4" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 78.0
margin_right = 98.0

[node name="PhaseStep5" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]

[node name="PhaseStep6" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 122.0
margin_right = 142.0

[node name="PhaseStep7" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 144.0
margin_right = 164.0

[node name="PhaseStep8" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 166.0
margin_right = 186.0

[node name="PhaseStep9" parent="Phase/Margin/Control/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 188.0
margin_right = 208.0

[node name="NextStage" type="NinePatchRect" parent="."]
visible = false
margin_left = 2.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 72.0
texture = ExtResource( 4 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 10

[node name="Margin" type="MarginContainer" parent="NextStage"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 6
custom_constants/margin_left = 8
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="NextStage/Margin"]
margin_left = 8.0
margin_top = 6.0
margin_right = 228.0
margin_bottom = 54.0

[node name="NextPhaseParent" type="Control" parent="NextStage/Margin/CenterContainer"]
margin_left = 110.0
margin_top = 24.0
margin_right = 110.0
margin_bottom = 24.0

[node name="NextPhaseLabel" type="Label" parent="NextStage/Margin/CenterContainer/NextPhaseParent"]
margin_left = -110.0
margin_top = -24.0
margin_right = 110.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 0.5, 0.5 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Next phase"
align = 1
valign = 1
autowrap = true
script = ExtResource( 6 )
max_font_size = 18

[node name="Button" type="Button" parent="NextStage"]
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "asdaf"
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/focus = SubResource( 1 )
flat = true

[connection signal="pressed" from="NextStage/Button" to="." method="_on_Button_pressed"]
